* 2017.11.20 - improved Intel OpenCL detection for 2017 SDK
             - improved CK env for latest Visual Studio 2017 (15.4)
             - fixed detection of latest Android NDK on Windows

* 2017.11.17 - improved ArmCL detection

* 2017.11.12 - added possibility to enable dependency based on env during package installation 
               (for example, ck install package --env.OPENCL=ON)

* 2017.11.11 - added detection of NN devices (Movidus)

* 2017.11.10 - moved run_and_get_stdout from CK kernel to module OS
               to keep compatibility with the CK now available in official Ubuntu 17.04+

* 2017.11.09 - added possibility to skip tool version recheck (to see if environment changed during expeirments)
             - added  "script_set_ondemand_cpu_freq": "ck-set-cpu-ondemand" 
               and "script_set_ondemand_gpu_freq": "ck-set-gpu-ondemand" 
               to all related OS entries to "calm" CPU/GPU experiments between repetitions
               to avoid system overheating
             - added possibility to customize package tags from pre_path function:
               currently used in ARMCL to add tags based on env such as (USE_OPENCL, USE_GRAPH, USE_NEON, etc)

* 2017.11.08 - added ninja.exe code generator for Windows

* 2017.11.02 - fixing issue #16 - .dylib for MacOS (32&64 bits)

* 2017.10.26 - detect ipython (useful for interactive DNN)
             - pass extra params to git (useful for --recursive for Caffe2)

* 2017.10.24 - fixed bug with CUDA 9.0 detection on Windows

* 2017.10.23 - added support for OS extensions when detecting soft (useful for .dylib on MacOS)

* 2017.10.18 - added latest JDK 9.0.1 and stable 8u131
             - added LLVM 5.0.0

* 2017.10.16 - added scons (soft & latest package)

* 2017.10.14 - added newer wget.exe for Windows (to support latest SSL)
             - added newer unzip.exe for Windows
             - added channel-stable to stable packages
