@@ -1,6 +1,7 @@
 * 2017.11.20 - improved Intel OpenCL detection for 2017 SDK
              - improved CK env for latest Visual Studio 2017 (15.4)
              - fixed detection of latest Android NDK on Windows
+             - fixed detection of cuDNN on Windows
 
 * 2017.11.17 - improved ArmCL detection
 
